--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "node.ts",
   "version": "1.0.0",
   "description": "A Node.js framework for creating Node APIs with Typescript and Express",
-  "main": "index.js",
+  "main": "./bin/index.js",
+  "types": "./bin/index.d.ts",
+  "bin": {
+    "node.ts": "./bin/index.js"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
+    "@types/inquirer": "^6.0.3",
     "@types/node": "^12.0.10",
     "chalk": "^2.4.2",
-    "commander": "^2.20.0"
+    "commander": "^2.20.0",
+    "inquirer": "^6.4.1"
   },
   "scripts": {
-    "build": "tsc --outDir bin"
+    "build": "tsc --outDir bin",
+    "prepublish": "tsc --outDir bin"
   },
   "author": "Matt Mawhinney",
   "license": "MIT"
