WIP Adding functionality to create package.json, tsconfig, and run git init

--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     "access": "public"
   },
   "dependencies": {
-    "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.0",
     "@types/inquirer": "^6.0.3",
     "@types/node": "^12.0.10",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
+    "cross-spawn": "^6.0.5",
     "inquirer": "^6.4.1",
     "log-symbols": "^3.0.0",
     "simple-git": "^1.121.0"
   },
   "scripts": {
     "build": "tsc --outDir bin",
-    "clean": "rm -rf bin && rm -rf my-app",
-    "dev": "npm run clean && npm run build",
+    "clean": "rm -rf bin",
+    "dev": "npm run clean && npm run build && npm link",
     "prepublish": "tsc --outDir bin"
   },
   "author": "Matt Mawhinney",
