--- a/package.json
+++ b/package.json
@@ -12,30 +12,34 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "ora": "^3.4.0",
-    "shelljs": "^0.8.3",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.2",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "cross-spawn": "^6.0.5",
+    "express": "^4.17.1",
     "inquirer": "^6.4.1",
     "log-symbols": "^3.0.0",
+    "ora": "^3.4.0",
+    "shelljs": "^0.8.3",
     "simple-git": "^1.121.0"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.0",
+    "@types/express": "^4.17.0",
     "@types/inquirer": "^6.0.3",
     "@types/node": "^12.0.10",
     "@types/shelljs": "^0.8.5",
-    "@types/express": "^4.17.0"
+    "@types/jest": "^24.0.15",
+    "ts-jest": "^24.0.2",
+    "jest": "^24.8.0",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf bin",
     "assets": "node static.js",
-    "dev": "npm run clean && npm run build && npm run assets"
+    "dev": "npm run clean && npm run build && npm run assets",
+    "test": "jest"
   },
   "author": "Matt Mawhinney",
   "license": "MIT"
