--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "@types/cross-spawn": "^6.0.0",
     "@types/express": "^4.17.0",
     "@types/inquirer": "^6.0.3",
+    "@types/jest": "^24.0.15",
     "@types/node": "^12.0.10",
     "@types/shelljs": "^0.8.5",
-    "@types/jest": "^24.0.15",
-    "ts-jest": "^24.0.2",
     "jest": "^24.8.0",
+    "rimraf": "^2.6.3",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf bin",
+    "clean": "rimraf bin",
     "assets": "node static.js",
     "dev": "npm run clean && npm run build && npm run assets",
     "test": "jest"
