--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "cross-spawn": "^6.0.5",
+    "del": "^5.0.0",
     "inquirer": "^6.4.1",
     "log-symbols": "^3.0.0",
     "ora": "^3.4.0",
